@@ -1,3 +1,7 @@
+Tue Apr 10 17:04:20 CEST 2012 (tk)
+----------------------------------
+ * libclamav/pe.c: drop old header check (bb#4699)
+
 Wed Mar 14 22:52:48 CET 2012 (tk)
 ---------------------------------
  * V 0.97.4
